<resources>
    <string name="app_name">Brother Budget</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Login_login_button">Log In</string>
    <string name="vehicle_summary">Vehicle Summary</string>
    <string name="menu_title">Main Menu</string>
    <string name="transaction_title">Main Menu</string>
    <string name="transaction_date">Date MM/DD/YYYY</string>
    <string name="transaction_budget">Budget Category</string>
    <string name="transaction_vendor">Vendor</string>
    <string name="transaction_payMethod">Payment Method</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_coments">Comments</string>
    <string name="total_string">Total: </string>
    <string name="no_expenses">No Expenses </string>
    <string name="vehicle_header">Vehicle</string>


    <string-array name="rewardsCC">
        <item>Mastercard</item>
        <item>visa</item>
        <item>Discover</item>
    </string-array>
    <string name="rewardsCC">Rewards CC</string>
    <string name="rewardsPoints">Reward Points</string>
    <string name="points">Enter Points</string>
    <string name="addRemove">Add/Remove Points</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="menu_drawer_open">Open the menu</string>
    <string name="menu_drawer_close">Close the menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
